@@ -1,1 +1,19 @@
 # Fergus_tradie
+This is an application for tradie's to keep track of their jobs. Development was focused on the front end, however there is a placeholder table and working add button.
+# Technologies used
+The app was developed using Java, using JavaFX and some scenebuilder.
+
+# How to run
+git clone https://github.com/MrBatchiPapa/demo.git
+
+The app was created as a JavaFX project. To run, add the project to workspace into IDE and open demo>src>main>test>App.java and click the run button above public static void Main (line 36).
+
+Or can be ran from command line using standard command
+To compile
+```javac --module-path "Path to your javafx lib folder" --add-modules javafx.controls,javafx.fxml YourFile.java```
+Then to run
+```java --module-path "Path to your javafx lib folder" --add-modules javafx.controls,javafx.fxml YourFile```
+
+
+
+
